# AI-Powered-Smart-Appointment-Booking-System

./: README.md  README_sections.md
Assigment 11/: README.md
Assigment 11/factories/: repository_factory.py
Assigment 11/repositories/: appointment_repository.py  doctor_repository.py  patient_repository.py  repository.py
Assigment 11/src/: admin.py  appointment.py  contact_info.py  doctor.py  enums.py  medical_record.py  notification.py  patient.py  rating.py  report.py  schedule.py  time_slot.py
Assigment 11/tests/: test_inmemory_appointment_repository.py  test_inmemory_doctor_repository.py  test_inmemory_patient_repository.py  (+1 more)
Assignment 10/: CHANGELOG.md  README.md
Assignment 12/: PROTECTION.md  README.md  pyproject.toml  requirements.txt
Assignment 12/api/: main.py  models.py
Assignment 12/api/routes/: appointment_routes.py  doctor_routes.py  patient_routes.py
Assignment 12/docs/: openapi.yaml
Assignment 12/services/: __init__.py  appointment_service.py  doctor_service.py  patient_service.py
Assignment 12/tests/api/: test_appointment_api.py  test_doctor_api.py  test_patient_api.py
Assignment 12/tests/services/: test_appointment_service.py  test_doctor_service.py  test_patient_service.py
Assignment 14/: CONTRIBUTING.md  INTEGRATION_GUIDE.md  ISSUE_TEMPLATES.md  LICENSE  README.md  REFLECTION.md  ROADMAP.md  VOTING_RESULTS.md
Assignment 5/: Assignment5_Documentation.md  test_cases_table.md  use_case_diagram_final.md
Assignment 8/: README.md
Assignment 9/: README.md  class_diagram.md  domain_model.md  reflection.md
(+46 files in other folders)
