[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "appointment-system"
version = "1.0.0"
description = "AI-Powered Smart Appointment Booking System"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "fastapi==0.88.0",
    "uvicorn==0.20.0",
    "pydantic==1.10.4",
    "email-validator==1.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.2.0",
    "httpx==0.23.3",
]

[tool.setuptools]
packages = ["api", "services"]
